Attempt to fix Chrome bug that collapses the editor if its height falls below a certain value

--- a/packages/builder/src/components/Editor/editor-style-overrides.css
+++ b/packages/builder/src/components/Editor/editor-style-overrides.css
@@ -27,3 +27,11 @@
 .monaco-aria-container {
   top: 0;
 }
+
+/* Add minimal height to editor container
+   (this circumvents a bug in chrome, which reduces the editor to
+   a single line if the editor height falls below a certain limit)
+*/
+.react-monaco-editor-container {
+  min-height: 100px;
+}
